<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_layout1"
            android:layout_toStartOf="@id/checkbox1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edBil1"
                android:inputType="number"
                android:hint="@string/bilangan_pertama"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/checkbox1"
            android:layout_alignTop="@id/ed_layout1"
            android:layout_below="@id/ed_layout1"
            />


    <!--    layout 2 -->
        <com.google.android.material.textfield.TextInputLayout
            android:enabled="false"
            android:layout_below="@id/ed_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_layout2"
            android:layout_toStartOf="@id/checkbox2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edBil2"
                android:inputType="number"
                android:hint="@string/bilangan_kedua"
                />
        </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/checkbox2"
            android:layout_alignTop="@id/ed_layout2"
            android:layout_below="@id/checkbox1"
            />


    <!--layout 3 -->

        <com.google.android.material.textfield.TextInputLayout
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_layout3"
            android:layout_toStartOf="@id/checkbox3"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/ed_layout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edBil3"
                android:inputType="number"
                android:hint="@string/bilangan_ketiga"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/checkbox3"
            android:layout_alignTop="@id/ed_layout3"
            android:layout_below="@id/ed_layout3"
            />

    <LinearLayout
        android:id="@+id/operator"
        android:layout_marginStart="10dp"
        android:layout_below="@id/ed_layout3"
        android:layout_toStartOf="@id/checkbox3"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultiple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiple"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/div"
            android:textSize="20sp"
            />
    </LinearLayout>
    <View
        android:id="@+id/view"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/checkbox3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/operator"
        android:layout_marginTop="30dp"
        android:background="@android:color/darker_gray"
        />
    <RelativeLayout
        android:layout_below="@id/view"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@id/checkbox3"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="50sp"
            android:layout_toStartOf="@id/tv_result"
            />
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:textSize="50sp"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

</RelativeLayout>